--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,13 @@
             <li><a href="#contacts">Contacts</a></li>
           </ul>
         </div>
+        <div class="wave-container">
+          <svg class="wave" viewBox="0 0 1440 400" preserveAspectRatio="none">
+            <path fill="#8eb486" fill-opacity="1"
+              d="M0,224L48,208C96,192,192,160,288,160C384,160,480,192,576,186.7C672,181,768,139,864,133.3C960,128,1056,160,1152,186.7C1248,213,1344,235,1392,245.3L1440,256L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+          </svg>
+        </div>        
       </nav>
     </header>
     <main class="content">
