--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,11 @@
       <nav>
         <div class="nav-container">
           <div class="logo">{Developer}</div>
+          <button class="burger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </button>
           <ul class="nav-links">
             <li><a href="#about">About Me</a></li>
             <li><a href="#skills">Skills</a></li>
