--- a/public/index.html
+++ b/public/index.html
@@ -127,6 +127,7 @@
           <h3>Blog</h3>
           <p>In this project i've created a functional Blog app in which you can either become an author or just a visitor.
             This project uses GoogleOauth - which allows users to register and allows this application to remember user roles.
+             I use PostgreSQL to store user data.
              Also app checks if you are authorized so only authorized users have permission to use the website.</p></p>
           <a href="https://blog-beige-nu.vercel.app/" target="_blank" class="project-link">View Project</a>
           <a href="https://github.com/EdithLess/Blog" target="_blank" class="project-code-link">View Code</a>
